<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings">Settings</string>
    <string name="action_hint">Information</string>
    <string name="action_restart">Restart</string>
    <string name="app_name" translatable="false">allMuffin</string>
    <string name="default_hint" translatable="false">Text</string>
    <string name="missing_hint">If you read this, you are in a project that is no longer supported or not yet done, maybe even abandoned.</string>
    <string name="popup_title">Information</string>
    <string name="popup_body">This App is more a training project with Android and Java than an
        actual App. Thank you for going through the trouble off installing this, if you have tips,
        criticism or found a bug/mistake, I would be happy to here from you. :)
    </string>
    <string name="popup_positive_button_text" translatable="false">Okay</string>
    <string name="popup_negative_button_text">No</string>
    <string name="main_open">OPEN</string>
    <string name="main_info">Hello and welcome to \"allMuffin\", a Project were all my AndroidProjects are put together! Whatever you are doing here when you aren\'t me, but whatever, here are all my current projects in oder:</string>
    <string name="leave_title">Exit Application</string>
    <string name="leave_message">Do you really want to exit the Application?</string>
    <string name="rot_title">Rule of three calculator</string>
    <string name="greeting">Hello and welcome to the rule of three calculator! :)</string>
    <string name="current_value">Current Value</string>
    <string name="value_hundred">Value at 100%</string>
    <string name="questioned_value">Value</string>
    <string name="current_percent">Current Percentage</string>
    <string name="questioned_percent">Percentage</string>
    <string name="value_one">Value at 1%</string>
    <string name="button_submit">CALCULATE!</string>
    <string name="button_wrong_input">OKAY, I will and I\'m sorry</string>
        <string name="message_wrong_input">One or more entries contain an error or were left empty, please
            double check your inputs and try again!
        </string>
    <string name="title_wrong_input">Error(s) in the inputs!</string>
    <string name="sa_title">Settings</string>
    <string name="timer_title" translatable="false">Timer</string>
    <string name="time_template" translatable="false">hh:MM:ss,SSS</string>
    <string name="calc_title">Calculator</string>
    <string name="button_clear" translatable="false">C</string>
    <string name="button_delete" translatable="false">&#8592;</string>
    <string name="button_divide" translatable="false">÷</string>
    <string name="button_multiply" translatable="false">*</string>
    <string name="button_add" translatable="false">+</string>
    <string name="button_subtract" translatable="false">-</string>
    <string name="button_equals" translatable="false">=</string>
    <string name="button_parentheses" translatable="false">( )</string>
    <string name="button_revert_value" translatable="false">+/-</string>
    <string name="button_period">.</string>
    <string name="button_num_zero" translatable="false">0</string>
    <string name="button_num_one" translatable="false">1</string>
    <string name="button_num_two" translatable="false">2</string>
    <string name="button_num_three" translatable="false">3</string>
    <string name="button_num_four" translatable="false">4</string>
    <string name="button_num_five" translatable="false">5</string>
    <string name="button_num_six" translatable="false">6</string>
    <string name="button_num_seven" translatable="false">7</string>
    <string name="button_num_eight" translatable="false">8</string>
    <string name="button_num_nine" translatable="false">9</string>
    <string name="warning_output_empty">Nothing to delete!</string>
    <string name="invalid_entry">Invalid entry!</string>
    <string name="gh_title" translatable="false">Game Hub</string>
    <string name="game_hub_info">Here you find a few (currently only one, if this text is still here
        but you see more than one, feel free to message me about this issue) \"games\" I tried my
        self on.</string>
    <string name="game_ttt_title" translatable="false">Tic Tac Toe</string>
    <string name="game_ttt_title_view">Start a new game!</string>
    <string name="game_ttt_settings_player_count">Do you have friends?</string>
    <string name="game_ttt_button_one_player">One Player</string>
    <string name="game_ttt_button_two_player">Two Player</string>
    <string name="game_ttt_settings_player_one_name">Enter your Name, Player One.</string>
    <string name="game_ttt_settings_player_two_name">Enter your Name, Player Two.</string>
    <string name="game_ttt_settings_player_two_name_ai">Enter the Name of your opponent, %1$s.</string>
    <string name="game_ttt_settings_player_one_color">Choose your Color, %1$s.</string>
    <string name="game_ttt_settings_player_two_color">Choose your Color, %1$s.</string>
    <string name="game_ttt_settings_player_two_color_ai">Choose the Color of your opponent, %1$s.</string>
    <string name="game_ttt_start_button">Go!</string>
    <string name="game_ttt_ai_level_title">Choose your opponents strength.</string>
    <string name="game_ttt_ai_level_easy">EASY</string>
    <string name="game_ttt_ai_level_medium">NORMAL</string>
    <string name="game_ttt_ai_level_hard">HARD</string>
    <string name="ttt_prefs_key" translatable="false">com.mysterionnh.allmuffin.GAME_TTT_PREFS</string>
    <string name="ttt_pref_player_one_name" translatable="false">playerOneName</string>
    <string name="ttt_pref_player_two_name" translatable="false">playerTwoName</string>
    <string name="ttt_pref_player_one_color" translatable="false">playerOneColor</string>
    <string name="ttt_pref_player_one_color_weak" translatable="false">playerOneColorWeak</string>
    <string name="ttt_pref_player_two_color" translatable="false">playerTwoColor</string>
    <string name="ttt_pref_player_two_color_weak" translatable="false">playerTwoColorWeak</string>
    <string name="ttt_pref_multiplayer" translatable="false">multiplayer</string>
    <string name="game_ttt_turn">It\'s %1$s\'s turn!</string>
    <string name="game_ttt_replay_button">Next round!</string>
    <string name="game_ttt_player_won">%1$s won!</string>
    <string name="game_ttt_already_filled">Someone already placed his/hers sign there!</string>
    <string name="game_ttt_draw">Draw…</string>
    <string name="game_ttt_leave_message">Do you really want to leave the game?</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template">This is just a sample text and
        will be removed as soon as I have to use StatusBarNotifications for real purposes. Oh, your
        string was: \"%1$s\".
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="pref_file_key" translatable="false" tools:ignore="UnusedResources">com.mysterionnh.allmuffin.allSharedPrefMuffins</string>
    <string name="pref_general_title">General Settings</string>
    <string name="pref_key_general_settings" translatable="false">pref_key_general_settings</string>
    <string name="pref_key_show_start_popup" translatable="false">pref_key_show_start_popup</string>
    <string name="pref_title_show_start_popup">Start Popup</string>
    <string name="pref_summary_show_start_popup">Show the Information Popup on App start</string>
    <string name="pref_default_value_show_start_popup" translatable="false">true</string>
    <string name="pref_positive_msg_show_start_popup">Information Popup on App start enabled</string>
    <string name="pref_negative_msg_show_start_popup">Information popup on App start disabled</string>
    <string name="pref_key_allow_bg_color_change" translatable="false">pref_key_allow_bg_color_change</string>
    <string name="pref_title_allow_bg_color_change">Change Background Color</string>
    <string name="pref_summary_allow_bg_color_change">Allows the changing of all (*cough* some) backgrounds in this app</string>
    <string name="pref_default_value_allow_bg_color_change" translatable="false">false</string>
    <string name="pref_positive_allow_bg_color_change">Not using the default background color</string>
    <string name="pref_negative_allow_bg_color_change">Now using the default background color</string>
    <string name="pref_key_bg_color" translatable="false">pref_key_bg_color</string>
    <string name="pref_title_bg_color">Background Color</string>
    <string name="pref_summary_bg_color">The Background Color you want, as a word, e.g. \"BLUE\" (Needs restart)</string>
    <string name="pref_default_value_bg_color" translatable="false">WHITE</string>
    <string name="pref_onchange_msg_bg_color">New background color (if that is an available color): \"%1$s\"</string>
    <string name="pref_lang_title">Language Settings</string>
    <string name="pref_key_lang_settings" translatable="false">pref_key_lang_settings</string>
    <string name="pref_key_allow_lang_change" translatable="false">pref_key_allow_lang_change</string>
    <string name="pref_title_allow_lang_change">Do not use system language</string>
    <string name="pref_summary_allow_lang_change">Allows you to choose a the apps language</string>
    <string name="pref_default_value_allow_lang_change" translatable="false">false</string>
    <string name="pref_positive_msg_allow_lang_change">Not using the system language</string>
    <string name="pref_negative_msg_allow_lang_change">Now using system language for the App</string>
    <string name="pref_key_lang" translatable="false">pref_key_lang</string>
    <string name="pref_title_lang">Language</string>
    <string name="pref_summary_lang">Requires restart</string>
    <string-array name="pref_lang_entries">
        <item>System setting</item>
        <item>English</item>
        <item>German</item>
    </string-array>
    <string-array name="pref_lang_values">
        <item>--</item>
        <item>uk</item>
        <item>de</item>
    </string-array>
    <string name="pref_default_lang">System setting</string>
    <string name="pref_onchange_lang_uk">App will be in English after restart</string>
    <string name="pref_onchange_lang_de">App will be in German after restart</string>
    <string name="pref_onchange_lang">Using devise language after restart</string>
    <string name="pref_key_calc_settings" translatable="false">pref_key_calc_settings</string>
    <string name="pref_title_calc_settings">Calculator Settings</string>
    <string name="pref_title_calc">After dot count</string>
    <string name="pref_summary_calc">Set the count of places after the dot until rounding sets in</string>
    <string name="pref_key_calc" translatable="false">pref_key_calc</string>
    <string name="pref_default_calc">Default (2)</string>
    <string-array name="pref_calc_entries">
        <item>App default (2)</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="pref_calc_values">
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="pref_onchange_calc">After dot count: </string>
    <string name="pref_misc_title" translatable="false">Miscellaneous</string>
    <string name="pref_key_misc_settings" translatable="false">pref_key_misc_settings</string>
    <string name="pref_button_restart_key" translatable="false">pref_button_restart_key</string>
    <string name="pref_button_restart_title">Restart</string>
    <string name="pref_button_restart_summary">Restarts the App (and returns to the main page)</string>
</resources>