<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tttSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/game_ttt_title_view"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:id="@+id/tttTitleSpacer"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/tttSettingsTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/tttTitleSpacer"
        android:measureWithLargestChild="false"
        android:orientation="vertical"
        android:visibility="visible">

        <TableRow
            android:id="@+id/playerCountWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/playerCount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playerCountView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:text="@string/game_ttt_settings_player_count"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/playerCountView">

                    <RelativeLayout
                        android:id="@+id/playerCountChoices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/buttonOnePlayer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/spacerPlayerCount"
                            android:text="@string/game_ttt_button_one_player"
                            android:theme="@style/CustomButton" />

                        <Space
                            android:id="@+id/spacerPlayerCount"
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:layout_centerHorizontal="true" />

                        <Button
                            android:id="@+id/buttonTwoPlayer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/spacerPlayerCount"
                            android:text="@string/game_ttt_button_two_player"
                            android:theme="@style/CustomButton" />
                    </RelativeLayout>
                </FrameLayout>

            </RelativeLayout>

        </TableRow>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="25dp" />

        <TableRow
            android:id="@+id/namePlayerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/namePlayerOneView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:text="@string/game_ttt_settings_player_one_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/namePlayerOneView">

                    <RelativeLayout
                        android:id="@+id/relativeLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/playerOneName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </RelativeLayout>
                </FrameLayout>
            </RelativeLayout>
        </TableRow>

        <Space
            android:id="@+id/space4"
            android:layout_width="fill_parent"
            android:layout_height="25dp" />

        <TableRow
            android:id="@+id/namePlayerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/namePlayerTwoView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:text="@string/game_ttt_settings_player_two_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/namePlayerTwoView">

                    <RelativeLayout
                        android:id="@+id/relativeLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/playerTwoName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </RelativeLayout>
                </FrameLayout>
            </RelativeLayout>
        </TableRow>

    </LinearLayout>
</RelativeLayout>

    