<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:theme="@android:style/Theme.Material.Light.DarkActionBar"
    android:weightSum="1"
    android:focusableInTouchMode="false"
    android:id="@+id/MainFrame">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mainLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_info"
            android:id="@+id/infoText"
            android:textColor="#ff000000" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tableRow0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rot_title"
                        android:id="@+id/dstView"
                        android:textColor="#ff000000"
                        android:layout_gravity="center"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_open"
                        android:id="@+id/drOpenButton"
                        android:layout_gravity="right"
                        android:singleLine="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tableRow1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/timer_title"
                        android:id="@+id/timerTextview"
                        android:textColor="#ff000000"
                        android:layout_gravity="center"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_open"
                        android:id="@+id/tiOpenButton"
                        android:layout_gravity="right"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:singleLine="true" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tableRow2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pg_title"
                        android:id="@+id/textView2"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ff000000" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_open"
                        android:id="@+id/pgOpenButton"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>
            </TableRow>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
